<resources>
    <string name="app_name">LeoWallet</string>
    <string name="your_account">Ваш счёт :</string>
    <string name="enter_promotion_code">Введите промокод</string>
    <string name="get_bonus">Получить бонус!</string>
    <string name="leowallet">LeoWallet</string>
    <string name="replenish">Пополнить</string>
    <string name="get_money">Вывести</string>
    <string name="search_services_and_recipients">Поиск услуг и получателей</string>
    <string name="send_money">Перевести  деньги</string>
    <string name="pay_service">Оплатить  услуги</string>
    <string name="bill">Выставить  счёт</string>
    <string name="account_number">Номер счёта</string>
    <string name="test_number">380636062256</string>
    <string name="password">Пароль</string>
    <string name="test_password">11111111</string>
    <string name="login">Войти</string>
    <string name="current_balance">Текущий баланс : ₴ </string>
    <string name="amount_get">Сумма снятия</string>
    <string name="enter_account_recipient">Введите счёт получателя</string>
    <string name="amount">Сумма</string>
    <string name="send">Отправить</string>
    <string name="amount_of_putting">Сумма пополнения</string>
    <string name="put">Пополнить</string>
    <string name="favorite">Избранное</string>
    <string name="lasts">Последние</string>
    <string name="date">Дата:</string>
    <string name="count">Сума:</string>
    <string name="recipient_2">Получатель:</string>
    <string name="sender">Отправитель:</string>
    <string name="wallet">Кошелёк</string>
    <string name="bonus">Бонусы</string>
    <string name="history">История</string>
    <string name="profile">Профиль</string>
    <string name="colorContactBackground">#252429</string>
    <string name="are_you_want_exit">Вы действительно хотите выйти?</string>
    <string name="exit">Выход</string>
    <string name="pay_services">Оплата услуг</string>
    <string name="paying_for_services">Платим за услуги</string>
    <string name="aamount">Счёт</string>
    <string name="show_amount">Выставляем счёт</string>
    <string name="exit_now">Выйти</string>
</resources>
