<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/ac_tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/current_balance" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_account_recipient">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_recipient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />


        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/ac_tv_send_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_shape_button_3"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            android:text="@string/send"
            android:textColor="@color/colorWhite" />

    </android.support.v7.widget.LinearLayoutCompat>


</android.support.constraint.ConstraintLayout>