<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ac_imv_leo_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/leo" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/account_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ac_imv_leo_logo"
            app:layout_constraintVertical_bias="0">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/ac_edt_login"
                android:layout_width="324dp"
                android:layout_height="50dp"
                android:gravity="start"
                android:inputType="text"
                android:maxLines="1"
                android:text="@string/test_number" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:hint="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_login">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/ac_edt_password"
                android:layout_width="324dp"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@string/test_password" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/ac_btn_login"
            android:layout_width="324dp"
            android:layout_height="50dp"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/round_shape_button_3"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>