<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/ac_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#252429"
                android:textSize="15sp"
                android:textStyle="bold" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/ac_tv_my_wallet_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#9e9e9e" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/ac_tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/current_balance" />


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_of_putting">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/ac_btn_up_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_shape_button_3"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            android:text="@string/put"
            android:textColor="@color/colorWhite" />


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>