<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="#32323c"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/llc_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ac_imv_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_wallet"
            app:tint="@color/colorInactive" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/ac_tv_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wallet"
            android:textAllCaps="true"
            android:textColor="@color/colorInactive" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/llc_bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ac_imv_bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_bonus"
            app:tint="@color/colorInactive" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/ac_tv_bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bonus"
            android:textAllCaps="true"
            android:textColor="@color/colorInactive" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/llc_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ac_imv_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_history"
            app:tint="@color/colorInactive" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/ac_tv_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/history"
            android:textAllCaps="true"
            android:textColor="@color/colorInactive" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/llc_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ac_imv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_profile"
            app:tint="@color/colorInactive" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/ac_tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:textAllCaps="true"
            android:textColor="@color/colorInactive" />

    </android.support.v7.widget.LinearLayoutCompat>


</android.support.v7.widget.LinearLayoutCompat>