<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient"
                android:orientation="vertical"
                android:paddingBottom="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/ac_tv_my_wallet_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorWalletBackground"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/leowallet"
                    android:textColor="@color/colorWhite" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/ac_tv_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:layout_marginBottom="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_gravity="center"/>


                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/ac_btn_up_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="24dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_shape_button"
                        android:text="@string/replenish"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/ac_btn_receive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_shape_button_2"
                        android:text="@string/get_money"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />


                </android.support.v7.widget.LinearLayoutCompat>


            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:background="@color/colorSearchBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="48dp"
                    android:clickable="false"
                    app:srcCompat="@drawable/ic_search_black_24dp"
                    android:queryHint="ищите сдесь">

                </android.support.v7.widget.AppCompatImageView>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/search_services_and_recipients" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/llc_send_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_send_money"
                        style="@style/AppTheme.CardStyle">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_send" />

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/send_money" />


                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/llc_pay_services"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_pay_services"
                        style="@style/AppTheme.CardStyle">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_wallet" />

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/pay_service" />


                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/llc_bill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <android.support.v7.widget.CardView
                        android:id="@+id/cv_bill"
                        style="@style/AppTheme.CardStyle">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            app:srcCompat="@drawable/ic_bill" />

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/bill" />


                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/llc_invoices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/llc_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llc_invoices">


            </android.support.v7.widget.LinearLayoutCompat>


            <LinearLayout
                android:id="@+id/llc_lasts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llc_favorites">


            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/include"
        layout="@layout/layout_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</android.support.v7.widget.LinearLayoutCompat>